<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.simpleflatmapper</groupId>
	<artifactId>sfm-test-osgi</artifactId>
	<packaging>jar</packaging>

	<version>3.13-SNAPSHOT</version>

	<licenses>
		<license>
			<name>The MIT License (MIT)</name>
			<url>http://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<properties>
		<jar.classifier />
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-csv</artifactId>
			<version>3.13-SNAPSHOT</version>
			<classifier>${jar.classifier}</classifier>
		</dependency>

		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-jdbc</artifactId>
			<version>3.13-SNAPSHOT</version>
			<classifier>${jar.classifier}</classifier>
		</dependency>
		<dependency>
			<groupId>org.simpleflatmapper</groupId>
			<artifactId>sfm-poi</artifactId>
			<version>3.13-SNAPSHOT</version>
			<classifier>${jar.classifier}</classifier>
		</dependency>
		<dependency>
			<groupId>org.apache.felix</groupId>
			<artifactId>org.apache.felix.framework</artifactId>
			<version>5.6.1</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.5</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.ops4j.pax.tinybundles</groupId>
			<artifactId>tinybundles</artifactId>
			<version>2.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.22</version>
		</dependency>
	</dependencies>


	<profiles>
		<profile>
			<id>jdk19</id>
			<activation>
				<jdk>9</jdk>
			</activation>
			<properties>
				<jar.classifier>jdk9</jar.classifier>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>

						<configuration>
							<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
						</configuration>
					</plugin>
				</plugins>

			</build>
		</profile>

	</profiles>
</project>
